--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "@types/react-router-dom": "^5.3.3",
     "date-fns": "^4.1.0",
     "ionicons": "^7.0.0",
+    "jwt-decode": "^4.0.0",
+    "ms": "^2.1.3",
+    "pocketbase": "^0.25.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
@@ -39,6 +44,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/ms": "^2.1.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^5.0.0",
